--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <button type="button" id="startBtn">Start recording</button>
     <button type="button" id="endBtn">End Recording</button>
+    
+    <script src="index.js"></script>
 </body>
 </html>
