--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <button type="button" id="startBtn">Start recording</button>
-    <button type="button" id="endBtn">End Recording</button>
+    <button type="button" id="stopBtn">End Recording</button>
     
     <script src="index.js"></script>
 </body>
